# cookiecutter-pdm

./: .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: cicd.md  docker.md  makefile.md  pdm.md
features/cicd/: index.html
features/codecov/: index.html
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/pdm/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
prompt_arguments/: index.html
search/: search_index.json
tests/: test_cookiecutter.py
tutorial/: index.html
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/actions/setup-pdm-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  on-release-main.yml
