[project]
name = "cookiecutter-pdm"
description = "A python cookiecutter application to create a new python project that uses PDM to manage its dependencies."
authors = [
    {name = "Florian Maas", email = "info@fpgmaas.com"},
]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'PDM']
dynamic = "version"
license = {text = "MIT"}
requires-python = ">=3.8,<4.0"
dependencies = [
"cookiecutter>=2.1.1"
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "."
includes = ["cookiecutter_pdm"]
source-includes = [  
  '{{cookiecutter.project_name}}/**/*',
  'cookiecutter.json',
  'hooks/*'
  ]

[project.scripts]
ccpdm = 'cookiecutter_pdm.cli:main'

[project.urls]
Repository = "https://github.com/fpgmaas/cookiecutter-pdm"
Documentation = "https://fpgmaas.github.io/cookiecutter-pdm/"
Homepage = "https://fpgmaas.github.io/cookiecutter-pdm/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-cookies>=0.6.1",
    "tox>=3.25.1",
    "deptry>=0.6.4",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.235",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
]

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_pdm"]

[tool.mypy]
files = ['cookiecutter_pdm']
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.deptry]
extend_exclude = [
  "{{cookiecutter.project_name}}"
]
ignore_obsolete = ["cookiecutter"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]