[project]
name = "{{cookiecutter.project_slug}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"},
]
readme = "README.md"
packages = [
  {include = "{{cookiecutter.project_slug}}"}
]
requires-python = ">=3.8,<4.0"
dependencies = []
license = {text = "{{cookiecutter.open_source_license}}"}
keywords = ['python']

[tool.pdm.version]
source = "scm"

[project.urls]
Homepage = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.2.0",
  {% if cookiecutter.codecov == 'y' -%}
  "pytest-cov>=4.0.0"
  {% endif -%}
  ]
dev = [
{% if cookiecutter.deptry == 'y' -%}
  "deptry>=0.6.4",
{% endif -%}
  "mypy>=0.981",
  "pre-commit>=2.20.0",
  "tox>=3.25.1"
]
{% if cookiecutter.mkdocs == 'y' -%}
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.19.0"
]
{%- endif %}

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "."
includes = ["{{cookiecutter.project_slug}}"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["{{cookiecutter.project_slug}}"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
{% endif%}
